<resources>
    <string name="app_name">Lab2</string>
    <string name="id">ID: </string>
    <string name="full_name">Full Name:</string>
    <string name="is_manager">Is A Manager: </string>
    <string name="staff">Staff</string>
    <string name="add">Add</string>
    <string name="food_name">Food Name: </string>
    <string name="thumbnail">Thumbnail: </string>
    <string name="is_promotion">Promotion: </string>
    <string name="spinner_prompt">Select a thumbnail</string>
</resources>